<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mahlabs.happyhourslicer.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_bebados_text"
        android:id="@+id/lbl_bebados"
        android:textColor="@color/colorLabel"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edt_bebados"
        android:numeric="integer"
        android:hint="@string/edt_bebados_hint"
        android:imeOptions="actionNext"
        android:layout_gravity="bottom"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorHintText"
        android:background="@color/colorEditBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_famintos_text"
        android:id="@+id/lbl_famintos"
        android:textColor="@color/colorLabel"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edt_famintos"
        android:numeric="integer"
        android:hint="@string/edt_famintos_hint"
        android:imeOptions="actionNext"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorHintText"
        android:background="@color/colorEditBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_total_text"
        android:id="@+id/lbl_total"
        android:textColor="@color/colorLabel"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edt_total"
        android:numeric="decimal"
        android:hint="@string/edt_total_hint"
        android:imeOptions="actionNext"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorHintText"
        android:background="@color/colorEditBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_bebidas_text"
        android:id="@+id/lbl_bebidas"
        android:textColor="@color/colorLabel"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/edt_bebidas"
        style="@android:style/Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/edt_bebidas_hint"
        android:inputType="numberDecimal"
        android:numeric="decimal"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorHintText"
        android:background="@color/colorEditBackground"/>

    <Button
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_slicer_text"
        android:id="@+id/btn_slicer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15sp"
        android:textSize="15sp"
        android:background="@drawable/btn1"
        android:textColor="@color/colorSecondaryMahlabs"
        android:onClick="onBtnSlicer" />

</LinearLayout>